[tool.poetry]
name = "riskmap"
version = "0.1"
description = "Mapping red team tools to risk frameworks"
authors = ["Leron Gray <daddycocoaman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
stix2 = "^2.1.0"
typer = {version = "^0.3.2", extras = ["all"]}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
